--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "vue": "^2.5.22",
-    "vuetify": "^1.3.0"
+    "vue-router": "^3.0.1",
+    "vue2-leaflet": "^1.2.3",
+    "vuetify": "^1.3.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
