--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "elasticsearch": "^15.4.1",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vue2-leaflet": "^1.2.3",
