--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "elasticsearch": "^15.4.1",
+    "leaflet": "^1.4.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
     "vue2-leaflet": "^1.2.3",
