--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "elasticsearch": "^15.4.1",
     "leaflet": "^1.4.0",
     "vue": "^2.5.22",
+    "vue-frame": "^1.0.7",
     "vue-router": "^3.0.1",
     "vue2-leaflet": "^1.2.3",
     "vuetify": "^1.3.0",
