added environment vars

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,5 @@
-NODE_ENV=production
+module.exports = {
+  NODE_ENV: '"production"',
+  API_URL: '"https://elasticsearch-demo-service.herokuapp.com"',
+  ES_HOST: '"h8amddgsal:utz1kuxw98@lhm-search-demo-4880040604.eu-west-1.bonsaisearch.net:443"'
+}
