--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,10 @@
-NODE_ENV=development
+'use strict'
+
+const merge = require('webpack-merge')
+const prodEnv = require('./prod.env')
+
+module.exports = merge(prodEnv, {
+    NODE_ENV: '"development"',
+    API_URL: '"http://localhost:8081"',
+    ES_HOST: '"localhost:9200"'
+})
