--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,3 @@
-module.exports = {
-  NODE_ENV: '"production"',
-  API_URL: '"https://elasticsearch-demo-service.herokuapp.com"',
-  ES_HOST: '"h8amddgsal:utz1kuxw98@lhm-search-demo-4880040604.eu-west-1.bonsaisearch.net:443"'
-}
+NODE_ENV=production
+VUE_APP_API_URL=https://elasticsearch-demo-service.herokuapp.com
+VUE_APP_ES_HOST=h8amddgsal:utz1kuxw98@lhm-search-demo-4880040604.eu-west-1.bonsaisearch.net:443
