--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,3 @@
-'use strict'
-
-const merge = require('webpack-merge')
-const prodEnv = require('./prod.env')
-
-module.exports = merge(prodEnv, {
-    NODE_ENV: '"development"',
-    API_URL: '"http://localhost:8081"',
-    ES_HOST: '"localhost:9200"'
-})
+NODE_ENV=development
+VUE_APP_API_URL=http://localhost:8081
+VUE_APP_ES_HOST=localhost:9200
